Telex to Gempyre

--- a/gui/calc.html
+++ b/gui/calc.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="calc.css">
 </head>
 <body>
-<script src="/telex.js"></script>
+<script src="/gempyre.js"></script>
 <div class="calculator">
 	<div class="history"></div>
     <div class="screen">
